--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-
     <!-- Bootstrap Icon -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -46,12 +44,7 @@
       <h1 class="display-6">Cozy Spaces, Timeless Designs</h1>
       <p class="lead">We offer a wide range of home décor products that will create a cozy and beautiful atmosphere in your space</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,32L40,48C80,64,160,96,240,138.7C320,181,400,235,480,245.3C560,256,640,224,720,186.7C800,149,880,107,960,117.3C1040,128,1120,192,1200,197.3C1280,203,1360,149,1400,122.7L1440,
-        96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
+        <path fill="#ffffff" fill-opacity="1" d="M0,32L40,48C80,64,160,96,240,138.7C320,181,400,235,480,245.3C560,256,640,224,720,186.7C800,149,880,107,960,117.3C1040,128,1120,192,1200,197.3C1280,203,1360,149,1400,122.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
       </svg>
     </section>
     <!-- End Jumbotron -->
@@ -84,16 +77,7 @@
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#fd97cc"
-          fill-opacity="2"
-          d="M0,192L40,197.3C80,203,160,213,240,
-            197.3C320,181,400,139,480,144C560,149,640,203,720,197.3C800,192,
-            880,128,960,117.3C1040,107,1120,149,1200,181.3C1280,213,1360,235,
-            1400,245.3L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,
-            320,1040,320,960,320C880,320,800,320,720,320C640,320,
-            560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
+        <path fill="#fd97cc" fill-opacity="2" d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,144C560,149,640,203,720,197.3C800,192,880,128,960,117.3C1040,107,1120,149,1200,181.3C1280,213,1360,235,1400,245.3L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
       </svg>
     </section>
     <!-- End About -->
@@ -175,95 +159,69 @@
         </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-            fill="#ffffff"
-            fill-opacity="1"
-            d="M0,224L48,213.3C96,203,192,181,288,181.3C384,181,480,203,576,181.3C672,160,768,96,864,
-            96C960,96,1056,160,1152,186.7C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,
-            320,1248,320,1152,320C1056,320,960,320,864,320C768,320,
-            672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
+        <path fill="#ffffff" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,181.3C384,181,480,203,576,181.3C672,160,768,96,864,64C960,32,1056,32,1152,64C1248,96,1344,160,1392,192L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
     </svg>
-</section>
-    <!-- End Products -->
-
-    <!-- Start Order -->
- <section id="Order">
+  <!-- End Products -->
+  
+  <!-- Start Order -->
+  <section id="Order">
     <div class="container">
-        <div class="row text-center mb-3">
-            <div class="col">
-                <h2>Order Form</h2>
-            </div>
+      <div class="row text-center">
+        <div class="col">
+          <h2>Order Now</h2>
         </div>
-              <form name = "Order-Form">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
-                    </div>
-                    <div class="mb-3">
-                      <label for="email" class="form-label">Email</label>
-                      <input type="text" class="form-control" id="email" name="email" />
-                  </div>
-                  <div class="mb-3">
-                    <label for="Products" class="form-label">Products</label>
-                    <select name="Products" class="form-select">
-                        <option value= ></option>
-                        <option value="Houseplants">Houseplants</option>
-                        <option value="Flower-Pillow">Flower Pillow</option>
-                        <option value="Adoreble-Mirror">Adorable Mirror</option>
-                        <option value="Flower-Carper">Flower Carpet</option>
-                        <option value="Acrylic-Rack">Acrylic Rack</option>
-                        <option value="Aromatherapy-Candles">Aromatherapy Candles</option>
-                    </select>
-                    <div class="mb-3">
-                      <label for="note" class="form-label">Notes</label>
-                      <input type="text" class="form-control" id="note" aria-describedby="note" placeholder="masukkan alamat anda" />
-                    </div>
-                           
-
-                    <button type="submit" class="button">Buy</button>
-                </form>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <form id="OrderForm" name="Order-Form">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" name="name" />
             </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="text" class="form-control" id="email" name="email" />
+            </div>
+            <div class="mb-3">
+              <label for="Products" class="form-label">Products</label>
+              <select name="product" class="form-select">
+                <option value=""></option>
+                <option value="Houseplants">Houseplants</option>
+                <option value="Flower-Pillow">Flower Pillow</option>
+                <option value="Adorable-Mirror">Adorable Mirror</option>
+                <option value="Flower-Carpet">Flower Carpet</option>
+                <option value="Acrylic-Rack">Acrylic Rack</option>
+                <option value="Aromatherapy-Candles">Aromatherapy Candles</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="note" class="form-label">Notes</label>
+              <input type="text" class="form-control" id="note" name="notes" placeholder="Masukkan alamat Anda" />
+            </div>
+            <button type="submit" class="btn btn-primary">Buy</button>
+          </form>
         </div>
+      </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-            fill="#fd97cc"
-            fill-opacity="1"
-            d="M0,96L48,128C96,160,192,224,288,224C384,
-            224,480,160,576,128C672,96,768,96,864,133.3C960,171,1056,245,1152,234.7C1248,224,1344,
-            128,1392,80L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,
-            320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-    </svg>
-</section>
-<!-- End Order -->
+  </section>
+  <!-- End Order -->
 
-<!-- Start Footer -->
-<footer class="bg-fd97cc text-black text-center pb-30">
-    <p>Created with <i class="bi bi-heart-fill"></i> by <a href="https://statistics.uii.ac.id"
-        class="text-black fw-bold">Jasmin's Cozy Corner</a></p>
-</footer>
-<!-- End Footer -->
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbwCcV0O1mNDcn-2wDp8plPLtINtg2fNBYuigB4TxYZNKtj294nXFVA2dfIfE16oWL1v/exec';
-      const form = document.getElementById('OrderForm');
-
-      form.addEventListener('submit', (e) => {
-        e.preventDefault();
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-          .then((response) => {
-            alert('Order berhasil dikirim!');
-            form.reset();
-          })
-          .catch((error) => {
-            console.error('Error!', error.message);
-            alert('Terjadi kesalahan, coba lagi nanti.');
-          });
-      });
-    </script>
-  </body>
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwCcV0O1mNDcn-2wDp8plPLtINtg2fNBYuigB4TxYZNKtj294nXFVA2dfIfE16oWL1v/exec';
+    const form = document.getElementById('OrderForm');
+  
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then((response) => {
+          alert('Order berhasil dikirim!');
+          form.reset();
+        })
+        .catch((error) => {
+          console.error('Error!', error.message);
+          alert('Terjadi kesalahan, coba lagi nanti.');
+        });
+    });
+  </script>
+  </body>
 </html>
