--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
         </div>
       </div>
     </div>
+     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+            fill="#fd97cc"
+            fill-opacity="1"
+            d="M0,96L48,128C96,160,192,224,288,224C384,
+            224,480,160,576,128C672,96,768,96,864,133.3C960,171,1056,245,1152,234.7C1248,224,1344,
+            128,1392,80L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,
+            320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+    </svg>
   </section>
   <!-- End Order -->
 
