--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <input type="text" class="form-control" id="email" name="email" />
             </div>
            <div class="mb-3">
-  <label for="product" class="form-label">Produk</label>
+  <label for="product" class="form-label">Product</label>
   <select id="product" name="product" class="form-select">
     <option value=""></option>
     <option value="Houseplants">Houseplants</option>
